much work on BTO

--- a/papers/Cr/bib.bib
+++ b/papers/Cr/bib.bib
@@ -12,7 +12,7 @@ volume = {117},
 year = {2016}
 }
 
-@article{Singer2015,
+@article{Singer2015prl,
 abstract = {Symmetry breaking and the emergence of order is one of the most fascinating phenomena in condensed matter physics. It leads to a plethora of intriguing ground states found in antiferromagnets, Mott insulators, superconductors, and density-wave systems. Exploiting states of matter far from equilibrium can provide even more striking routes to symmetry-lowered, ordered states. Here, we demonstrate for the case of elemental chromium that moderate ultrafast photo-excitation can transiently enhance the charge-density-wave (CDW) amplitude by up to 30{\%} above its equilibrium value, while strong excitations lead to an oscillating, large-amplitude CDW state that persists above the equilibrium transition temperature. Both effects result from dynamic electron-phonon interactions, providing an efficient mechanism to selectively transform a broad excitation of the electronic order into a well defined, long-lived coherent lattice vibration. This mechanism may be exploited to transiently enhance order parameters in other systems with coupled degrees of freedom.},
 archivePrefix = {arXiv},
 arxivId = {1511.08261},
@@ -32,6 +32,26 @@ url = {http://arxiv.org/abs/1511.08261 http://dx.doi.org/10.1103/PhysRevLett.117
 volume = {117},
 year = {2015}
 }
+
+@article{Singer2015prb,
+abstract = {Here we report on the dynamics of the structural order parameter in a chromium film using synchrotron radiation in response to photo-induced ultra-fast excitations. Following transient optical excitations the effective lattice temperature of the film rises close to the N$\backslash$'{\{}e{\}}el temperature and the charge density wave (CDW) amplitude is reduced. Although we expect the electronic charge ordering to vanish shortly after the excitation we observe that the CDW is never completely disrupted, which is revealed by its unmodified period at elevated temperatures. We attribute the persistence of the CDW to the long-lived periodic lattice displacement in chromium. The long-term evolution shows that the CDW revives to its initial strength within 1 ns, which appears to behave in accordance with the temperature dependence in equilibrium. This study highlights the fundamental role of the lattice distortion in charge ordered systems and its impact on the re-condensation dynamics of the charge ordered state in strongly correlated materials.},
+archivePrefix = {arXiv},
+arxivId = {1411.5623},
+author = {Singer, A. and Marsh, M. J. and Dietze, S. H. and Uhl{\'{i}}ř, V. and Li, Y. and Walko, D. A. and Dufresne, E. M. and Srajer, G. and Cosgriff, M. P. and Evans, P. G. and Fullerton, E. E. and Shpyrko, O. G.},
+doi = {10.1103/PhysRevB.91.115134},
+eprint = {1411.5623},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Singer et al. - 2015 - Condensation of collective charge ordering in chromium.pdf:pdf},
+issn = {1550235X},
+journal = {Physical Review B - Condensed Matter and Materials Physics},
+mendeley-groups = {PhD/Cr CDW,PhD Thesis/Cr},
+number = {11},
+pages = {1--17},
+title = {{Condensation of collective charge ordering in chromium}},
+volume = {91},
+year = {2015}
+}
+
+
 @article{Zeiger1992,
 abstract = {We report femtosecond time-resolved pump-probe reflection experiments in semimetals and semiconductors that show large-amplitude oscillations with periods characteristic of lattice vibrations. Only A1 modes are detected, although modes with other symmetries are observed with comparable intensity in Raman scattering. We present a theory of the excitation process in this class of materials, which we refer to as displacive excitation of coherent phonons (DECP). In DECP, after excitation by a pump pulse, the electronically excited system rapidly comes to quasiequilibrium in a time short compared to nuclear response times. In materials with A1 vibrational modes, the quasiequilibrium nuclear A1 coordinates are displaced with no change in lattice symmetry, giving rise to a coherent vibration of A1 symmetry about the displaced quasiequilibrium coordinates. One important prediction of the DECP mechanism is the excitation of only modes with A1 symmetry. Furthermore, the oscillations in the reflectivity R are excited with a cos(0t) dependence, where t=0 is the time of arrival of the pump pulse peak, and 0 is the vibrational frequency of the A1 mode. These predictions agree well with our observations in Bi, Sb, Te, and Ti2O3. The fit of the experimental R(t)/R(0) data to the theory is excellent. {\textcopyright} 1992 The American Physical Society.},
 author = {Zeiger, H. J. and Vidal, J. and Cheng, T. K. and Ippen, E. P. and Dresselhaus, G. and Dresselhaus, M. S.},
@@ -182,5 +202,20 @@ pages = {1--5},
 title = {{Phonon-assisted spin splitting in centrosymmetric crystals}},
 url = {http://arxiv.org/abs/1711.06274},
 year = {2017}
+}
+
+@article{Hostetler1999,
+abstract = {Femtosecond thermoreflectance data for thin films and bulk quantities of Au, Cr, and Al are compared with the parabolic two-step thermal diffusion model for the purpose of determining the electron-phonon coupling factor. The thin films were evaporated and sputtered onto different substrates to produce films that vary structurally. The measurement of the electron-phonon coupling factor is shown to be sensitive to grain size and film thickness. The thin-film thermoreflectance data are compared with that of the corresponding bulk material and to a theoretical model relating the coupling rate to the grain-boundary scattering and size effects on the mean free path of the relevant energy carrier. {\textcopyright} 1999 Optical Society of America.},
+author = {Hostetler, John L. and Smith, Andrew N. and Czajkowsky, Daniel M. and Norris, Pamela M.},
+doi = {10.1364/ao.38.003614},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Hostetler et al. - 1999 - Measurement of the electron-phonon coupling factor dependence on film thickness and grain size in Au, Cr, and.pdf:pdf},
+issn = {0003-6935},
+journal = {Applied Optics},
+mendeley-groups = {PhD Thesis/Cr},
+number = {16},
+pages = {3614},
+title = {{Measurement of the electron-phonon coupling factor dependence on film thickness and grain size in Au, Cr, and Al}},
+volume = {38},
+year = {1999}
 }
 
