--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -134,7 +134,7 @@ More specifically we include energy contributions due to small spin cantings, i.
 \begin{figure*}[h]
     \centering
     \IncludeGraphics[width=\linewidth]{canting}
-	\caption{{\bf Energy contributions due to spin canting.}\\ Zeeman (a) and Heisenberg exchange (b) energy gains when Mn spins (black arrows) are canted slightly by angle $\delta \theta$. In each panel the dashed teal arrows signify the canted spins, compared with the perfect collinear configuration. In the Zeeman term (a) the spins inside one chain are canted slightly towards the field (red), leading to a weak ferromagnetic moment that couples to it, thus gaining Zeeman energy. The interchain vs intrachain AFM exchange is optimized through a small canting of the two neighboring ferromagnetically aligned spins that invevitably arise due to the geometric frustration.\label{fig:GdMn2O5_canting}}
+	\caption{{\bf Energy contributions due to spin canting.} Zeeman (a) and Heisenberg exchange (b) energy gains when Mn spins (black arrows) are canted slightly by angle $\delta \theta$. In each panel the dashed teal arrows signify the canted spins, compared with the perfect collinear configuration. In the Zeeman term (a) the spins inside one chain are canted slightly towards the field (red), leading to a weak ferromagnetic moment that couples to it, thus gaining Zeeman energy. The interchain vs intrachain AFM exchange is optimized through a small canting of the two neighboring ferromagnetically aligned spins that invevitably arise due to the geometric frustration.\label{fig:GdMn2O5_canting}}
 \end{figure*}
 
 The Zeeman energy of two neighboring spins $\pmb{\sigma}_{i}$ and $\pmb{\sigma}_{i+1}$ in a chain reads
@@ -307,19 +307,17 @@ The magic angle region for this set of model parameters is relatively narrow, ab
 However, by tuning the model parameters both the width and positioning of the ``magic'' angle region can be changed.
 This will be discussed in further detail later, but first we turn to the peculiar four-state switching cycle.
 
-\newpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% begin copied section
 \begin{figure}[h]
 	\IncludeGraphics{spin_configs}
-	\caption{{\bf Spin configurations for different field angles and values} The green arrows denote the AFM order parameter orientations during the field sweep (a) where the color gradient (red to blue) in panels (b-f) correspond to the field value of $\bm{H}$ in panel (a). The microscopic spin configuration of panel (c) is detailed in the right panel surrounded by the red square. Spin configurations (1, 2, 3, 4) are labeled as in Fig.~\ref{fig:GdMn2O5_theory}(b). The full rotation is performed by the chain that is most parallel to the direction of the applied field.\label{fig:GdMn2O5_regimes}}  
+	\caption{{\bf Spin configurations for different field angles and values.} The green arrows denote the AFM order parameter orientations during the field sweep (a) where the color gradient (red to blue) in panels (b-f) correspond to the field value of $\bm{H}$ in panel (a). The microscopic spin configuration of panel (c) is detailed in the right panel surrounded by the red square. Spin configurations (1, 2, 3, 4) are labeled as in Fig.~\ref{fig:GdMn2O5_theory}(b). The full rotation is performed by the chain that is most parallel to the direction of the applied field.\label{fig:GdMn2O5_regimes}}  
 \end{figure}
-\begin{figure}[b!]
+\begin{figure}[h!]
     \centering
     \IncludeGraphics{4configs.png}
     \caption{\label{fig:GdMn2O5_spin_configs} The spin configurations corresponding to the four states. Gd ions are displayed in green, Mn in purple. The cyan lines highlight the orientation of the chains. }
     \label{fig:my_label}
 \end{figure}
-\newpage
 
 The Mn and Gd spin configurations for the four states are shown in the right panel of Fig.~\ref{fig:GdMn2O5_regimes}, and in greater detail in Fig.~\ref{fig:GdMn2O5_spin_configs}. 
 %
@@ -455,4 +453,3 @@ This is a microscopic analogue to the crankshaft in a car, transforming linear b
 Due to different behavior of the two chains in GdMn$_2$O$_5$, i.e. one doing a full-circle rotation while the other toggles, the double sweep of the magnetic field is accompanied by two reversals of the electric polarization.
 %
 One could envision a theoretical application of this behavior as an electric counter of magnetic field pulses.
-\printbibliography
