--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -3225,3 +3225,18 @@ url = {http://arxiv.org/abs/1105.5251{\%}0Ahttp://dx.doi.org/10.1142/S0217979211
 year = {2011}
 }
 
+@article{Ponet2018,
+abstract = {{\textcopyright} 2018 American Physical Society. Large Rashba-like spin splitting has been recently found in the band structure of certain bulk ferroelectrics. In contrast to the relativistic Rashba effect, the chiral spin texture and large spin splitting of the electronic bands depend strongly on the character of the band and atomic spin-orbit coupling. We establish that this can be traced back to an interplay between the orbital angular momentum and ferroelectricity. The additional dependence on the orbital composition of the bands is crucial to the complete picture of the effect. Results from first-principles calculations on ferroelectic GeTe verify the key predictions of the model.},
+author = {Ponet, Louis and Artyukhin, S.},
+doi = {10.1103/PhysRevB.98.174102},
+issn = {2469-9950},
+journal = {Physical Review B},
+month = {nov},
+number = {17},
+pages = {174102},
+title = {{First-principles theory of giant Rashba-like spin splitting in bulk GeTe}},
+url = {https://link.aps.org/doi/10.1103/PhysRevB.98.174102},
+volume = {98},
+year = {2018}
+}
+
