--- a/papers/Theory/bib.bib
+++ b/papers/Theory/bib.bib
@@ -69,3 +69,15 @@ volume = {94},
 year = {1954}
 }
 
+@article{Bloch1929,
+year = {1929},
+author = {Bloch, Felix},
+doi = {https://doi.org/10.1007/BF01339455},
+title = {Über die Quantenmechanik der Elektronen in Kristallgittern},
+journal = {Zeitschrift für Physik},
+number = {52},
+pages = {555--600}
+}
+
+
+
