--- a/papers/Theory/Theory.tex
+++ b/papers/Theory/Theory.tex
@@ -1,7 +1,7 @@
 \chapter{Theory}
 
 \section{Density Functional Theory \label{sec:DFT}}
-Many physics in condensed matter originate from the electronic structure of the material under study.
+Many of the physics in condensed matter originates from the electronic structure of the material under study.
 There are two main ways of performing quantitative theoretical studies in case.
 The first is to start from a tight-binding model that includes the most likely valence orbitals of the constituent ions \cite{Slater1954}, fitting it to experimental measurements such as angle resolved photoemission spectroscopy~\cite{Damascelli2004}.
 A second, purely theoretical, possibility is to desribe the electronic structure entirely from first-principles, using only the ions and crystalline structure as the input. 
@@ -58,16 +58,20 @@ In most problems one is not interested in the exact form of the wavefunctions cl
 
 \section{Wannier Functions \label{sec:Wannier}}
 
-In a lot of the work presented in this Thesis we construct simplified model Hamiltonians to try and describe the physics that are manifested real materials.
-For topics involving the electronic structure, either directly in describing the Rashba-splitting of energy bands in Chapter \ref{ch:Rashba}, or indirectly to parametrize the magnetic exchanges between localized spins as in Chapter \ref{ch:GdMn2O5}, tight-binding models are often the most appropriate tool.
-These are constructed by defining a localized, often atomic-like, set of orbitals which is repeated inside each unit cell, and the so-called hopping terms between them \cite{Slater1954}.
-The first benefit of this simplification is that it makes the numerics of the problem more tractable, since a limited set of orbitals leads to small dimensions of the matrices that represent various operators.
-Secondly, the representation in terms of real-space localized wavefunctions, as compared with the extended Bloch functions (BFs) that diagonalize the Hamiltonian, often also leads to a more intuitive picture.
-There are two main methods that are used to construct the tight-binding Hamiltonian.
-The first is to use a semi-empirical approach, where first a set of localized orbitals is chosen, in terms of which the elements of the Hamiltonian can be written down as a combination of certain model parameters, the amount of which is reduced by using symmetry arguments.
-In the case of real materials one then uses experimental measurements to fit these model parameters.
+In a lot of the work presented in this Thesis we construct simplified model Hamiltonians.
+Not only does this make the problem more easily solvable, the reduced complexity often also leads to an increased understanding of the effects at play.
+For topics that involve the electronic structure, such as the large Rashba-splitting of energy bands discussed in Chapter \ref{ch:Rashba}, a tight-binding model is often the most appropriate tool.
+% or indirectly to parametrize the magnetic exchanges between localized spins as in Chapter \ref{ch:GdMn2O5}, .
+These models have appeared in various forms throughout history, originally proposed by Bloch \cite{Bloch1929l}, and sometimes also referred to as the {\it linear combination of atomic orbitals} method \cite{Slater1954}.
+This last description hints at how they are constructed.
+First, a set of real space orbitals are defined inside the unit cell which are repeated throughout the system to construct the full basis.
+The elements of the Hamiltonian are then constructed by considering the overlap integrals between the orbitals.
+These are often referred to as {\it hopping parameters}, since when written in a second quantized form, they describe the process of annihilating an electron on one orbital and creating it on another. 
+Fourier transforming and diagonalizing this periodic Hamiltonian then leads to the Bloch functions and electronic band structure of the crystal.
+By exploiting the symmetries of the crystal and the basis orbitals, one can then fit a selected number of variables to an experiment in order to calculate the hopping parameters.
+This method of constructing the tight-binding model is mostly used for analytical descriptions, or as a semi-empirical method.
 
-The second is to extract these orbitals, and parameters from a first-principles based simulation such as DFT, described in the previous section.
+Another way of constructing such a model is by extracting the localized orbitals and hopping parameters from a first-principles based simulation such as DFT.
 In thesis we favor the latter since it is more flexible, not depending on experiments while still providing quantitative results.
 This also allows for an easy comparison of multiple materials in order to better understand how certain physics manifest themselves in different cases. 
 
@@ -91,7 +95,7 @@ The comparison between BFs and WFs is made in Fig.~\ref{fig:Theory_blochvswan}.
 		\caption{}
 		\IncludeGraphics{wanwindows.png}
 	\end{subfigure}
-	\caption{\label{fig:Theory_blochvswan} a) A comparison between Bloch functions (left) and Wannier functions (right). The green line in the left panel denotes the envelope function $\eikr{r}$. b) Bandstructure of semiconductor GeTe, demonstrating three cases for Wannierization: red is a single disconnected band, green shows a disconnected composite manifold of connected bands, blue shows the situation when bands need to be disentangled.}
+	\caption{\label{fig:Theory_blochvswan} a) A comparison between Bloch functions (left) and Wannier functions (right). The green line in the left panel denotes the envelope function $\eikr{r}$. This images was taken from Ref.~\cite{Marzari2012}. b) Bandstructure of semiconductor GeTe, demonstrating three cases for Wannierization: red is a single disconnected band, green shows a disconnected composite manifold of connected bands, blue shows the situation when bands need to be disentangled.}
 \end{figure}
 When $k=0$ we can see that the periodic part of the BF $\unkr{n}{k}$ is simply the sum over the WFs centered at different unit cells.
 In the case of $k \neq 0$, similar to how the envelope part modulates the periodic part of the BF, the contribution of each WF to the total sum needs to be modulated in a discrete way through $\eikr{R}$.
